--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,19 @@
       </plugin>
     </plugins>
   </build>
+      <dependencies>
+    <!-- 他の依存関係 -->
+    <!-- JSTL ライブラリ -->
+    <dependency>
+        <groupId>jakarta.servlet.jsp.jstl</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+        <version>3.0.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+        <version>3.0.1</version>
+    </dependency>
+    <!-- 他の依存関係 -->
+</dependencies>
 </project>
