--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,11 @@
     <artifactId>jbcrypt</artifactId>
     <version>0.4</version>
 	</dependency>
+	<!-- JSON変換用ライブラリ -->
+	<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.10.1</version>
+</dependency>
 </dependencies>
 </project>
